# ChangeLog for dev-python/astroid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/astroid/ChangeLog,v 1.5 2014/07/31 03:53:15 idella4 Exp $

*astroid-1.2.0 (31 Jul 2014)

  31 Jul 2014; Ian Delaney <idella4@gentoo.org> +astroid-1.2.0.ebuild:
  bump

*astroid-1.1.1 (08 May 2014)

  08 May 2014; Ian Delaney <idella4@gentoo.org> +astroid-1.1.1.ebuild,
  astroid-1.0.1-r1.ebuild:
  bump; drop py2.6 py3.2 pypy2_0 add py3.4 support, update test phase

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> astroid-1.0.1-r1.ebuild,
  astroid-1.0.1.ebuild:
  Add support for the new PyPy slotting.

*astroid-1.0.1-r1 (22 Mar 2014)

  22 Mar 2014; Ian Delaney <idella4@gentoo.org> +astroid-1.0.1-r1.ebuild:
  revbump; add optional dep for testsuite, update ebuild according re python
  impl deps fixes Bug #501550 by an eroen

*astroid-1.0.1 (12 Feb 2014)

  12 Feb 2014; Ian Delaney <idella4@gentoo.org> +astroid-1.0.1.ebuild,
  +metadata.xml:
  this is an updated clone if astng which has been renamed and the upstream repo
  re-located to bitbucket, py3.3 support added, test phase and install updated