@@ -7,13 +7,13 @@ DIST astroid-1.2.0.tar.gz 127194 SHA256 589e738d2e94bac938bd88e2b7331188c550c04b
 EBUILD astroid-1.0.1-r1.ebuild 1782 SHA256 3c1b7417dc545fb92a0ce859cf9a26c83e75ba336082324d736d2b842a2754ad SHA512 0e6153f3ae4b71a835e018132952a1672e327f7c6b3321ef97b52cc5bd3c7ae38fcc9297356f716b2791493b0d0095764371868e73ecc0da0878a54b281fef5d WHIRLPOOL a50121b0c383c51d11544a12622b4d0e0b21b10f503ecdc19b45db9a960d89634ca142a13362a9545b1dfa0e3a75d9658309991bea3beec5c85092583bfb070e
 EBUILD astroid-1.0.1.ebuild 1615 SHA256 3e620fc87fe7f4c62d6789a7309cd5b5321310a53c0a1653c2bcf66098f482a6 SHA512 e56e74fc7dec5caa1da9b7fbafed918d967df907a0071807d00d6afc5de852ff193dcb1b05a21e740b7ddc2c1c72aa65ed5e43d1b96e184fbb0bd1b15c31f937 WHIRLPOOL aad9bd5261e7bad7ba9e193c6f0921708ef9ba4798011b5e4d10c7d8a5014a28a418eec85f137137baa02e96ecc4a77d3d8128194aa54a57d3d66bf7a76945b4
 EBUILD astroid-1.1.1.ebuild 1560 SHA256 31edc7a7ac69ad1aa899e0ed35de21af2f9845d0311d51ae261768583d9816e9 SHA512 31cec2cf20bc1e4149192b409f62c37ad9419c8eb4dbb03c9a2252733d1b40dda49feb6ecf222fb9d8f87c60b0fcfc1ee49ba93467fcac127c964344d6afaf7f WHIRLPOOL 914d0a979cb3ee27eb331de68ea29b975679bf87ce8c1a8cd6d0adacc7b63522f8671eb67a45cdd98802b88ba42b06f242821741b8a4a282d30037ca677f44cf
-EBUILD astroid-1.2.0.ebuild 1611 SHA256 ff735fd2131714e94669fbd54265186a82b2ade8dd43d63fb30c55cbda7c6288 SHA512 ce8d2feccc6086629d8f6dfc61b7b140b6db47eb9f9265cf9b91aa2f495621d6cb3d105158297bb4cfa80def8b6e345caebee83531f2739b13dae43816a3fe05 WHIRLPOOL 624c266c2c4f52de03fc63093e38ac1d5da95be3e7ac55fe446954c929af9e546ca1e1ec1e0e2138b46e96fc024af78e54ad97758521624fad69d62d0a8f1104
-MISC ChangeLog 1164 SHA256 d0cef620a5517e9039b9ad9b967e0e4fac44a694b6bc6be0e73dd076385a3507 SHA512 e4699be4fd23c04108ea04e14d33b462c7d08c8b0006998bcdde2613bab0c0d8ebb4cfe4e6655a17b4a14972fada82f693db7af86b67829bd2319aaf9abc811f WHIRLPOOL 3c1457d2be169ae9f61e8c0b8000b949a1a65cf55ca59a52c12dfe129e277e1bf22363aec8c96f34e05ab79a281db50a0b4349cff64d43f32edd78f9f26194c2
+EBUILD astroid-1.2.0.ebuild 1614 SHA256 715971eb32dfea8f3ee5aa0b63689dc6df690378b1ece46b1db09f1edd953578 SHA512 961e4455d8d692ac28c99f8968624a79cf0bcd2c22f0ee998dd01aafdbe1f92b76a45564747f2ff1d544a8cdbe5ff1e6b105d08fab288e18a55927aa7f6345a8 WHIRLPOOL 99702a9a45564c78796eec6a85e246ec2fdbd56994b8ad779aa3c748a97af89f0fd12a0c7604ede8579724c3d6a16dcb70b6c7c8294f124a79b0ea73c94a489c
+MISC ChangeLog 1276 SHA256 d12ee001b583d4086a91eed4d2ab6016b3f4ee89da1df89f6a36d815d475ae9a SHA512 b4948e360f743dcd5b79aaa7c57bff7b6ceaeba514d599d30f557ca37030e2c870844f1b84c1bcbaa2c2a94d3559288d34644ad5d3916db7aa7d00c3863869f4 WHIRLPOOL 0ee7e9af9a34f1dd32e1ee5a5708009febe4ada31e098c775fd469773f3b45d3d667429e247951b4dd5a05f14e0d3e82fe70679c8c1c69cf476b35d8776daea7
 MISC metadata.xml 903 SHA256 30c79ff0c1bb5877b5f42686900f1b7c7edefd76834a5d96a1e7d3a64c6b91ab SHA512 edb464d771c46b5d66ab0246f7c6e8901863a197d70ae9139a38c61d92aa4a6ce8bbc4db4b236b61b9ecd9c4e428b6be7c78328a0743a5fa8ac4407b794dba14 WHIRLPOOL 6e0d3de24dd81950bcdc82a85f725d65b739f36e66a248b14d8b34894fa66c51ef3e40f57670e81b49baac459c7ca8c4454c2e3cc8f94e5c4f73aa55770f0118
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPZu6IACgkQso7CE7gHKw1RvwCgxF5tFqXHkL4qTvB7N50jeunN
-SsIAn0xSphQzHE+PvJEgKK6qPasL24rT
-=KUC0
+iEYEAREIAAYFAlPZ6FgACgkQso7CE7gHKw2+wACeMhWoKy5spskY2zjshFkFzhvq
+g4IAn2R68jm143f+90eV0oMe9TU+Gvqt
+=A+CF
 -----END PGP SIGNATURE-----
